# preprocessing

./: .gitignore  README.md  TODO.txt  pyproject.toml  requirements.txt  sam
config/: conf.yml  conf_clusterorder.yml  conf_clusterparams.yml  conf_coarsegrainedpip.yml  conf_convert_exchangeformat.yml  conf_encodingpip.yml  conf_encodingpip_pyg.yml  conf_normalization.yml  conf_normalizationpip.yml  global.yml
docs/: preprocessing.md
docs/pipeline_preprocessing/: filters.md  pipeline.md  source.md
env/: env.yml  env_basic_conda.yml  env_prep.yml  sg_prep.yml
experiments/: __init__.py  experiment.py  experiment_coarse.py  experiment_convert_exchangeformat.py  experiment_convert_sam.py  experiment_encoding.py  experiment_encoding_pyg.py  experiment_normalization.py  experiment_weight.py  full_pipeline.py  merge_dataset.py  preprocessing_params.py  split_dataset.py  split_dataset_pyg.py
scripts/: .gitignore  coarse.sh  convert_exchange_format.sh  encoding.sh  full_pipeline.sh  normalization.sh  weight.sh
src/: __init__.py  preprocessing.py
src/encoding/: encode.py
src/filters/: TO_ADD.txt  __init__.py  abstract_filter.py  factory.py  filter_barycenter.py  filter_boundingbox.py  filter_checklabel.py  filter_checknorm.py  filter_checkparamsmetrics.py  filter_clusterorder.py  filter_clusterparamvalues.py  filter_clustersequences.py  filter_constraintrefs.py  filter_convert_exchangeformat.py  filter_convertmetrics.py  filter_count.py  filter_counter.py  filter_divbymax.py  filter_dof.py  filter_encodeedgefeatures.py  filter_encodeorder.py  (+24 more)
tests/: __init__.py
(+111 files in other folders)
